[tool.poetry]
name = "ntu-vpn-linux"
version = "0.1.0"
description = "Connect to NTU VPN on Linux"
authors = ["Zhu Zhaomeng <zhaomeng.zhu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
splinter = "^0.14.0"
plumbum = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
